<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gradebook</string>
	
    <string name="title_section_courses">Courses</string>
    <string name="title_section_students">Students</string>
    <string name="title_section_dashboard">Dashboard</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_select_course">Select</string>
    <string name="action_add_course">Add Course</string>
    <string name="action_edit_courses">Edit Courses</string>
    <string name="action_change_course">Change Course</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_update">Update</string>

    <string name="title">Title</string>
    <string name="section">Section</string>
    <string name="semester">Semester</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="year">Year</string>
    <string-array name="semesters">
        <item>@string/fall</item>
        <item>@string/winter</item>
        <item>@string/spring</item>
        <item>@string/summer</item>
    </string-array>
    
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="rating">Rating</string>
	
    <string name="weight">Weight</string>
    <string name="possible_points">Possible Points</string>
    <string name="points_earned">Point Earned</string>
    
    <string name="long_dash">\u2014</string>
    
</resources>