<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail_edit_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_section"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/section"
        android:inputType="text" />

    <Spinner
        android:id="@+id/edit_semester"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/semesters"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/edit_year"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:inputType="number" />

    <LinearLayout
        android:id="@+id/assignment_types_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_add" />
    </LinearLayout>

</LinearLayout>