<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail_edit_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/assignment_errors_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/callout_danger"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="gone" >
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:layout_weight="2"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_possible_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/possible_points"
                android:layout_weight="1"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                >

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_add" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>